# player

./: .gitignore  PlayerLib.sln  README.md
CSharpPlayer/: CSharpPlayer.csproj  CloPlayer.cs
JsPlayer/: JsMediator.cs  JsPlayer.csproj  cloPlayer.js  player.js
LoadTest/: LoadTest.csproj  Program.cs
LoadTest/CallTest/: Caller.cs
LoadTest/Loader/: ModuleLoader.cs
PlayerLib/: IPlayer.cs
PyPlayer/: player.py
Runners/CSharp/: PlayerLib.sln
Runners/CSharp/CSharpHost/: CSharpHost.csproj  CSharpHost.http  Program.cs
Runners/CSharp/CSharpHost/Contracts/: IAppSettingVault.cs  IGameLogger.cs  IGameService.cs  IPlayerLoader.cs  IPlayerService.cs
Runners/CSharp/CSharpHost/Controllers/: BaseController.cs  GameController.cs  PlayerController.cs
Runners/CSharp/CSharpHost/Extensions/: ExceptionHandlingMiddlewear.cs
Runners/CSharp/CSharpHost/Models/: Enums.cs  GameMessage.cs  GameResult.cs  GameSet.cs  GameTurn.cs
Runners/CSharp/LoadTest/: LoadTest.csproj
Runners/Cpp/CppBuilder/: CMakeLists.txt  dllmain.cpp
Runners/Cpp/CppBuilder/src/: CppPlayer.cpp  CppPlayer.h
Runners/Cpp/CppHost/: README.MD  app.js  build.sh  config.json  package-lock.json  package.json
Runners/Cpp/CppHost/routes/: playerRoute.js
Runners/Cpp/CppPlayer/: README.MD  build.bat
Runners/Javascript/JsHost/: app.js  build.bat  config.json  package-lock.json  package.json
Runners/Python/: PyEnv.ps1  PyEnv.sh  README.md  requirements.txt  setup-mac.py  setup.py
Runners/Python/PyEnv/: pyvenv.cfg
Runners/Python/PyHost/: main.py  requirements.txt
Runners/Python/PyPlayer/: pyRunner.py
(+124 files in other folders)
